Fix toolbar overflow

--- a/extensions/wikia/WikiaBar/css/WikiaBar.scss
+++ b/extensions/wikia/WikiaBar/css/WikiaBar.scss
@@ -85,7 +85,7 @@ $animationSpeed: 200ms;
 			height: 25px;
 			margin: 0 24px 0 50px;
 			padding: 5px 5px 0 0;
-			text-align: right;
+			text-align: left;
 			white-space: nowrap;
 			width: 420px;
 			a {
